1-1-log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: log-ping-pvc
      containers:
        - name: log-output-generator
          image: imbekrishna/log-output-generator:1.10
          volumeMounts:
            - name: shared-log
              mountPath: /app/logs
        - name: log-output-reader
          image: imbekrishna/log-output-reader:1.11
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-log
              mountPath: /app/logs
